// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignatureRequestHeader renders correctly with fromAccount 1`] = `
<div>
  <div
    class="signature-request-header"
  >
    <div
      class="signature-request-header--account"
    >
      <div
        class="account-list-item undefined"
        data-testid="account-list-item"
      >
        <div
          class="account-list-item__top-row"
        >
          <div
            class=""
          >
            <div
              class="identicon account-list-item__identicon"
              style="height: 18px; width: 18px; border-radius: 9px;"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 18px; height: 18px; display: inline-block; background: rgb(24, 191, 242);"
              >
                <svg
                  height="18"
                  width="18"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#F59B00"
                    height="18"
                    transform="translate(1.1057728692647846 -1.1284144293741016) rotate(330.0 9 9)"
                    width="18"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F27602"
                    height="18"
                    transform="translate(8.068916496038273 0.7410013085075559) rotate(170.6 9 9)"
                    width="18"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#C8146B"
                    height="18"
                    transform="translate(-3.4359831020777025 11.706703966498809) rotate(121.2 9 9)"
                    width="18"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="account-list-item__account-name"
          >
            mockName
          </div>
        </div>
      </div>
    </div>
    <div
      class="signature-request-header--network"
    >
      <div
        class="network-display chip chip--with-left-icon chip--border-color-border-muted chip--background-color-undefined chip--max-content"
        data-testid="network-display"
      >
        <div
          class="chip__left-icon"
        >
          <div
            class="color-indicator color-indicator--filled color-indicator--color-icon-muted color-indicator--size-lg"
            data-testid="color-icon-icon-muted"
          >
            <i
              class="color-indicator__icon fa fa-question"
            />
          </div>
        </div>
        <span
          class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography chip__label typography--h7 typography--weight-normal typography--style-normal typography--color-text-alternative"
        >
          goerli
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignatureRequestHeader renders correctly without fromAccount 1`] = `
<div>
  <div
    class="signature-request-header"
  >
    <div
      class="signature-request-header--account"
    />
    <div
      class="signature-request-header--network"
    >
      <div
        class="network-display chip chip--with-left-icon chip--border-color-border-muted chip--background-color-undefined chip--max-content"
        data-testid="network-display"
      >
        <div
          class="chip__left-icon"
        >
          <div
            class="color-indicator color-indicator--filled color-indicator--color-icon-muted color-indicator--size-lg"
            data-testid="color-icon-icon-muted"
          >
            <i
              class="color-indicator__icon fa fa-question"
            />
          </div>
        </div>
        <span
          class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography chip__label typography--h7 typography--weight-normal typography--style-normal typography--color-text-alternative"
        >
          goerli
        </span>
      </div>
    </div>
  </div>
</div>
`;
